--- a/vermontcomplexsystems-foundation.rw/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T15:04:39Z</date>
+						<date>2018-12-06T15:29:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -178,6 +178,16 @@
 								<key>Size</key>
 								<integer>74749</integer>
 							</dict>
+							<key>files/stacks-image-9874180-1200x1200.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								XrS9Kf/Un0KY
+								6Koyks/bGQ==
+								</data>
+								<key>Size</key>
+								<integer>188190</integer>
+							</dict>
 							<key>files/stacks-image-ea8f203-1200x212.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -192,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F9mTF9ImYWdC
-								lYe6pTlWJg==
+								ZfA5o96hQdgN
+								udvgbH/EwA==
 								</data>
 								<key>Size</key>
-								<integer>188917</integer>
+								<integer>190307</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -212,11 +222,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w6jtZjiG/c0y
-								1ZlwDwODNg==
+								WeiJjyV7r+jj
+								LCZb4Vzbug==
 								</data>
 								<key>Size</key>
-								<integer>85478</integer>
+								<integer>87143</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
