--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-06T15:24:35Z</date>
+						<date>2018-12-06T17:52:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								97yFenCJwJXH
-								6gkXG7VnCA==
+								KXtcmvGL0fUT
+								KSdjYyNcZw==
 								</data>
 								<key>Size</key>
-								<integer>66489</integer>
+								<integer>66439</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
