--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6048,7 +6048,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-07T15:59:09Z</date>
+						<date>2018-12-10T14:19:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6477,11 +6477,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V1Vj/LLssi9Z
-								XfCbSLVyog==
+								uGDIBWlObb/T
+								kFdC2r3Qrw==
 								</data>
 								<key>Size</key>
-								<integer>141490</integer>
+								<integer>141804</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10360,7 +10360,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-07T15:53:01Z</date>
+						<date>2018-12-10T14:19:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10409,11 +10409,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HdGjAGPGtFKr
-								RB8qSRT2BA==
+								PLcHU20TnkxE
+								lBVDM2w+9w==
 								</data>
 								<key>Size</key>
-								<integer>4676</integer>
+								<integer>4644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10462,7 +10462,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-07T15:53:01Z</date>
+						<date>2018-12-10T14:19:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11501,11 +11501,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qdobDBOuY4yd
-								6pHbBIve2w==
+								850ultq89Zoz
+								a0PftS6Cbg==
 								</data>
 								<key>Size</key>
-								<integer>4178</integer>
+								<integer>3475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11609,8 +11609,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDdaCeb
-				qeOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDfVrJ7
+				ZL+AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11620,7 +11620,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDdaCebrW2A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDfVrJ7aJ2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
