--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T14:19:15Z</date>
+						<date>2018-12-10T15:19:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uGDIBWlObb/T
-								kFdC2r3Qrw==
+								d3WgYSMDPT4c
+								hXBDfV+DYg==
 								</data>
 								<key>Size</key>
-								<integer>141804</integer>
+								<integer>142144</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
