--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -6048,7 +6048,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:19:49Z</date>
+						<date>2018-12-10T15:22:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6457,8 +6457,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0GbObWYUnXQH
-								m3mWP2WALg==
+								9Gc9TUyLWBDo
+								OoSXwvcaSQ==
 								</data>
 								<key>Size</key>
 								<integer>179965</integer>
@@ -6477,8 +6477,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d3WgYSMDPT4c
-								hXBDfV+DYg==
+								PuRYo1N7AIwY
+								BdMbLVnM+w==
 								</data>
 								<key>Size</key>
 								<integer>142144</integer>
@@ -10360,7 +10360,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:19:49Z</date>
+						<date>2018-12-10T15:22:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10409,11 +10409,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ndFZsFhESmdW
-								mecsK0jetQ==
+								PLcHU20TnkxE
+								lBVDM2w+9w==
 								</data>
 								<key>Size</key>
-								<integer>4676</integer>
+								<integer>4644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10462,7 +10462,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:19:49Z</date>
+						<date>2018-12-10T15:22:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11501,11 +11501,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qdobDBOuY4yd
-								6pHbBIve2w==
+								850ultq89Zoz
+								a0PftS6Cbg==
 								</data>
 								<key>Size</key>
-								<integer>4178</integer>
+								<integer>3475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11609,8 +11609,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDfXcue
-				sbOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDfXg6K
+				hOCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11620,7 +11620,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDfXcuetUaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDfXg6KgK6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
