--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:19:49Z</date>
+						<date>2018-12-10T15:22:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -442,8 +442,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0GbObWYUnXQH
-								m3mWP2WALg==
+								9Gc9TUyLWBDo
+								OoSXwvcaSQ==
 								</data>
 								<key>Size</key>
 								<integer>179965</integer>
@@ -462,8 +462,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d3WgYSMDPT4c
-								hXBDfV+DYg==
+								PuRYo1N7AIwY
+								BdMbLVnM+w==
 								</data>
 								<key>Size</key>
 								<integer>142144</integer>
