--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-10T15:22:03Z</date>
+						<date>2018-12-11T13:53:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PuRYo1N7AIwY
-								BdMbLVnM+w==
+								VFG/+Hn25jsf
+								AtDRuONYBw==
 								</data>
 								<key>Size</key>
-								<integer>142144</integer>
+								<integer>142174</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
