NETSCI SAT CALL CLOSED
NETSCI SAT CALL CLOSED

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T19:56:36Z</date>
+						<date>2018-12-12T16:26:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7291,11 +7291,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qVzlwqo7m3Ne
-								QCKatyZc1w==
+								EuD51ncllBMn
+								yyi5e2UEPQ==
 								</data>
 								<key>Size</key>
-								<integer>212008</integer>
+								<integer>211461</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7311,11 +7311,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TGQ7rCkjTngk
-								Y7PUwCw2dQ==
+								8UsSJ+LRbT6t
+								4LmCYknY9Q==
 								</data>
 								<key>Size</key>
-								<integer>143368</integer>
+								<integer>143051</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7540,7 +7540,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-12T16:26:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7609,11 +7609,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								H3SZWXX+7tD1
-								WEyQd3kctw==
+								uq0wGRJL7M2r
+								+s8Ily6Udg==
 								</data>
 								<key>Size</key>
-								<integer>66824</integer>
+								<integer>66886</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8632,7 +8632,7 @@
 					<key>page63 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-12T16:26:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8681,11 +8681,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rv3UkSkollV8
-								ISXkfhaqUw==
+								zHuSnTgkGTem
+								sgG9wZGLvA==
 								</data>
 								<key>Size</key>
-								<integer>118139</integer>
+								<integer>117636</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -8701,11 +8701,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VTB1DBSMwKUm
-								1mJqoe34sw==
+								pJx3sZqSCfjL
+								Iy82MzwLlQ==
 								</data>
 								<key>Size</key>
-								<integer>50861</integer>
+								<integer>50606</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11609,8 +11609,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDgNbxQ
-				uaGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDgtxdk
+				c8WAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11620,7 +11620,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDgNbxQv8uA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDgtxdke3CA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
