--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T19:56:36Z</date>
+						<date>2018-12-12T16:26:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qVzlwqo7m3Ne
-								QCKatyZc1w==
+								EuD51ncllBMn
+								yyi5e2UEPQ==
 								</data>
 								<key>Size</key>
-								<integer>212008</integer>
+								<integer>211461</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TGQ7rCkjTngk
-								Y7PUwCw2dQ==
+								8UsSJ+LRbT6t
+								4LmCYknY9Q==
 								</data>
 								<key>Size</key>
-								<integer>143368</integer>
+								<integer>143051</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
