--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-12T16:26:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rv3UkSkollV8
-								ISXkfhaqUw==
+								zHuSnTgkGTem
+								sgG9wZGLvA==
 								</data>
 								<key>Size</key>
-								<integer>118139</integer>
+								<integer>117636</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VTB1DBSMwKUm
-								1mJqoe34sw==
+								pJx3sZqSCfjL
+								Iy82MzwLlQ==
 								</data>
 								<key>Size</key>
-								<integer>50861</integer>
+								<integer>50606</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
